--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+@font-face {
+  font-family: 'CustomFont';
+  src: url('/Embolism\ Spark.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: "CustomFont";
+}
